parser/src/test/resources/corpus/valid/56_multi_rules.ff
rule "First" {
  description: "first rule in file"
}

rule "Second" {
  description: "second rule"
}

rule "Third" {
  description: "third rule"
}
