parser/src/test/resources/corpus/invalid/07_misspelled_rule_keyword.ff
rul "Misspelled Keyword" {
  description: "rule keyword is misspelled"
}
